--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Tangerine&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/0d4fb1df06.js" crossorigin="anonymous"></script>
 		<meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-		<title>FoxEdits</title>
+		<title>001streets</title>
 		<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -154,28 +154,27 @@ I create identity of a company, I deliver materials that support your brand. <st
 								<p class="swiftlogo">
 										<img src="swift.jpg" width="150" height="150">
 								</p>
-								<p class="name"><b>Swift Errands</b></p>
+								<p class="name"><b>Edgar Kigika</b></p>
 								<p class="descri2">Founder, Swift Errands</p>
 						</div>
 						<div class="antlia">
 								<a href="https://twitter.com/isaacsimiyukh?t=pqxSDD1ZNQRRAdWG3BuCcA&s=09" class="button3">Antlia Entity</a>
 								<p>
 										As a 4 years experienced full stacker developer and a  graphic 
-										designer. I have seen the growth and dedication of 001streets 
+										designer. I have seen the growth and dedication of Fox
 										towards his career is unmatched. Definitely recommended.
 								</p>
 								<p class="antlialogo">
 										<img src="antlia.jpg" height="200" height="200">
 								</p>
-								<p class="name2"><b>Antlia Entity</b></p>
+								<p class="name2"><b>Isaac Simiyu</b></p>
 								<p class="descri3">Founder, Antlia Entity</p>
 						</div>
 				</div>
 				<div class="ach">
 						<h1 class="big">Biggest Life Achievements </h1>
 						<br>
-						○ Creating this website.
-				<br>
+						○ Creating this website
 						made with <i class="fa-solid fa-heart fa-beat" style="color: #ff0000;">  </i> on <i class="fa-brands fa-apple" style="color: #000000;"></i>
 				</div>
 				
@@ -183,7 +182,7 @@ I create identity of a company, I deliver materials that support your brand. <st
 				<a href="https://antlia.co.ke/" class="button3">°antlia technologies</a>
 				<div class="cr">
 				<i class="fa-regular fa-copyright" style="color: #000000;"></i>
-				Copyrights. copy if you want,I copied too.
+				Copyrights. copy if you want, I copied too.
 		</div>
 		</div>
 </body>
