--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Tangerine&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/0d4fb1df06.js" crossorigin="anonymous"></script>
 		<meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-		<title>001streets</title>
+		<title>foxentity</title>
 		<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,9 +22,9 @@
 				</p>
 		</div>
 				<div class="ccbtn">
-						<a href="tel:+254719467434" class="button"> <i class="fa-solid fa-phone fa-shake" style="color: #000000;"></i>	</a>
+						<a href="tel:+254711325211" class="button"> <i class="fa-solid fa-phone fa-shake" style="color: #000000;"></i>	</a>
 						<a href="https://wa.me/qr/JRSGDGH5IQX6E1" class="button"><i class="fa-brands fa-whatsapp fa-beat-fade" style="color: #005915;"></i></a>
-						<a href="mailto:001streets@gmail.com" class="button"><i class="fa-solid fa-envelope fa-beat-fade" style="color: #ff0000;"></i></a>
+						<a href="mailto:dangugi@outlook.com" class="button"><i class="fa-solid fa-envelope fa-beat-fade" style="color: #ff0000;"></i></a>
 						</i></a>
 				</div>
 <div class="location">
